samplepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-latest
spec:
  containers:
    - name: nginx
      image: nginx
