mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db 
  namespace: praveen-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo-db
          ports:
            - containerPort: 27017
          image: mongo:7.0


---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: praveen-ns
spec:
  selector:
    app: photo
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
