imageconstraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sLatestImages
metadata:
  name: latest-image-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
